task(Compose Initial setup): Create basic compose activity and add navigation from existing home activity Ticket-XXX
Add basic compose activity to the package.
Add navigation to compose home activity.
Created SharedHomeViewModel.kt and inject with koin.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">WorkshopOne</string>
     <string name="go_to_user_profile">Go to user profile</string>
+    <string name="navigate_to_compose_home_activity">Navigate to Compose Home Activity</string>
 </resources>
